# gql-pygen

./: .gitignore  README.md  pyproject.toml
cato_gql_client_pkg/: pyproject.toml
examples/: demo_auto_client.py
gql_codegen/: __main__.py  cli.py
gql_codegen/core/: __init__.py  client_generator.py  executor.py  generator.py  ir.py  parser.py  query_builder.py
gql_codegen/templates/: .gitkeep  base_client.py.j2  client.py.j2  models.py.j2  scalars.py.j2
gql_pygen/: __init__.py  __main__.py  cli.py
gql_pygen/core/: __init__.py  auth.py  client_generator.py  executor.py  generator.py  hooks.py  ir.py  parser.py  query_builder.py  scalars.py
gql_pygen/templates/: base_client.py.j2  client.py.j2  enums.py.j2  models.py.j2  scalars.py.j2
tests/: test_auth.py  test_client_generator.py  test_hooks.py  test_scalars.py
tests/test_schema/: base.graphqls  operations.graphqls
