[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gql-pygen"
version = "0.1.1"
description = "GraphQL to Python code generator - generates typed Pydantic models and async clients"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Yevgeny Farber"}
]
dependencies = [
    "graphql-core>=3.2.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic[email]",
    "click>=8.0.0",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/YevgenyFarber/gql-pygen"
Repository = "https://github.com/YevgenyFarber/gql-pygen"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
gql-pygen = "gql_pygen.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gql_pygen*"]

[tool.setuptools.package-data]
gql_pygen = ["templates/*.j2"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "twine>=6.2.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    "tests/generated",   # Generated test fixtures
    "output",            # Generated output
    "real_generated",    # Generated output
    "cato_gql_client_pkg",  # Generated output
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "UP",     # pyupgrade (modern Python syntax)
    "I",      # isort (import sorting)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "F403",   # star imports (intentional for generated models)
    "F405",   # undefined name from star import (side effect of F403)
]

[tool.ruff.lint.isort]
known-first-party = ["gql_pygen"]
force-single-line = true  # Keep one import per line for generated code readability
