[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gql-pygen"
version = "0.2.0"
description = "GraphQL to Python code generator - generates typed Pydantic models and sync/async clients"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Developer"}
]
dependencies = [
    "graphql-core>=3.2.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic[email]",
    "click>=8.0.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
gql-pygen = "gql_pygen.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gql_pygen*"]

[tool.setuptools.package-data]
gql_pygen = ["templates/*.j2"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "twine>=6.2.0",
]

