[project]
name = "cato-graphql-client"
version = "0.2.0"
description = "Generated GraphQL client for Cato Networks API"
requires-python = ">=3.10"
dependencies = [
    "pydantic[email]>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["generated_client"]

